Apply code formatting